Temporary fix for broken infocolumn
Bug: T111685

--- a/resources/css/ext.translate.editor.css
+++ b/resources/css/ext.translate.editor.css
@@ -112,7 +112,8 @@
 	overflow: auto;
 }
 
-.tux-message-editor .infocolumn-block {
+/* Temporary fix for T111685 */
+.grid .tux-message-editor .infocolumn-block {
 	font-size: 12pt;
 	background: #FCFCFC;
 	position: absolute;
